syntax = "proto3";

package users;

option go_package = "github.com/shiqinfeng1/goMono/api/users/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service UsersService {
  rpc GetTrainingBalance(GetTrainingBalanceRequest) returns (GetTrainingBalanceResponse) {
    option (google.api.http) = {
      post: "/user/v1/getTrainingBalance"
      body: "*"
    };
  }
  rpc UpdateTrainingBalance(UpdateTrainingBalanceRequest) returns (google.protobuf.Empty) {}
}

message GetTrainingBalanceRequest {
  string user_id = 1;
}

message GetTrainingBalanceResponse {
  int64 amount = 1;
}

message UpdateTrainingBalanceRequest {
  string user_id = 1;
  int64 amount_change = 2;
}
